// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Config get config should return config with overrides 1`] = `
{
  "breakingHeader": "# BREAKING",
  "groups": [
    {
      "change": "minor",
      "name": "## Features",
      "types": [
        "feat",
        "feature",
      ],
    },
    {
      "change": "patch",
      "name": "## Fixes",
      "types": [
        "fix",
      ],
    },
  ],
  "ignoredScopes": [
    "changelog",
  ],
  "lineFormat": "* %message% %hash% %hash%",
  "miscHeader": "## Misc",
  "releaseHeader": "## Release version - @%version%",
  "unreleasedHeader": "## **Unreleased**",
}
`;

exports[`Config get config should return default config 1`] = `
{
  "breakingHeader": "## BREAKING",
  "groups": [
    {
      "change": "minor",
      "name": "## Features",
      "types": [
        "feat",
        "feature",
      ],
    },
    {
      "change": "patch",
      "name": "## Fixes",
      "types": [
        "fix",
      ],
    },
  ],
  "ignoredScopes": [
    "changelog",
  ],
  "lineFormat": "- %message% %hash%",
  "miscHeader": "## Misc",
  "releaseHeader": "# %version%",
  "unreleasedHeader": "# Latest",
}
`;
